# siimpli-graph-it

./: .npmrc  CLAUDE.md  README.md  diff_copy.txt  package-lock.json  package.json  sonar-project.properties  temp_core_package.json  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
.scannerwork/: report-task.txt
data/: CommodityPriceChartAuReports_CSV.csv  CommodityPriceChartAuSpotOnly_CSV.csv  CommodityPriceChartAuSpot_CSV.csv  CommodityPriceChart_Excel.xlsx  projected_metal_prices.xlsx
data/commoditydataandmeanlinedifference/: report_copper_price.csv  report_silver_price.csv  timeline_copper_price.csv  timeline_silver_price.csv  timeline_zinc_price.csv  zzzzzx_cad_usd_variences.csv  zzzzzx_copper_price_variences.csv  zzzzzx_silver_price_variences.csv  zzzzzx_zinc_price_variences.csv
data/concentrates/: concentrate_charts_output.csv  copper.csv  zinc.csv
data/jan-13/: report_CAD_RATE.csv  report_gold_price.csv  timeline_cad_usd.csv  zzzzzx_gold_price_variences.csv  zzzzzx_lead_price_variences.csv
data/jan-6/: all_commodities_with_cad.csv  report_CAD_RATE.csv  report_copper_price.csv  report_gold_price.csv  report_lead_price.csv  report_silver_price.csv  report_zinc_price.csv
data/jan-7/: report_CAD_RATE.csv  report_copper_price.csv  report_gold_price.csv  report_lead_price.csv  report_silver_price.csv  report_zinc_price.csv
data/jan-9/: all_commodities_with_cad.csv  forecast-copper.csv  forecast-gold.csv  forecast-lead.csv  report_CAD_RATE.csv  report_copper_price.csv  report_gold_price.csv  report_lead_price.csv  report_silver_price.csv  report_zinc_price.csv  (+6 more)
docs/: DeveloperGuide.md  UserGuide.md  code-duplication-analysis.md  execution_plan.md  graph-config.schema.json  headless-batch-roadmap.md  headless-code-flow.md  headless-decisions.md  headless-implementation-plan.md  performance-audit.md  refactoring-progress.md  sonarqube-workflow-script.md  sources of metal prices.txt
scripts/: run-sonarqube-workflow.ps1  sync-versions.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  meta-plot.json
src-tauri/src/: lib.rs  main.rs
vite-plugins/: debug-context.js
(+45 files in other folders)
