[package]
name = "siimpli-graph-it"
version = "0.3.69"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }
tauri = { version = "2.8.0", features = ["unstable", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.dev]
incremental = true # Compile only what changed
codegen-units = 256 # Allow more parallel processing (slower code, faster build)
opt-level = 0 # No optimizations
debug = true # Keep debug info
split-debuginfo = "unpacked" # CRITICAL for Windows: Keeps debug info in separate files, avoiding massive binary rewriting

# Optimize dependencies once, but never again during dev
[profile.dev.package."*"]
opt-level = 3 # Fast dependencies = fast app runtime
[dependencies]
tauri = { version = "2.8.0", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-utils = "2.6.0"
indexmap = { version = "2.2.6", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"
regex = "1.5"
chrono = "0.4"
toml = "0.8.22"
once_cell = "1.19.0"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.22", features = ["stream", "json"] }
futures-util = "0.3.31"
semver = "1.0"
sha2 = "0.10"
lazy_static = "1.5.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2.4.0"
urlencoding = "2.1"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
keyring = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "script_manager"
path = "src/lib.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"
tempfile = "3.8"
